# msql-srv

./: Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
examples/: psql_as_mysql.rs  serve_auth.rs  serve_one.rs  works_with_jdbc.rs
src/: commands.rs  connection.rs  lib.rs  packet.rs  params.rs  resultset.rs  service.rs  tls.rs  writers.rs
src/value/: decode.rs  encode.rs  mod.rs  utils.rs
tests/: async.rs  main.rs
