[package]
name = "msql-srv"
version = "0.9.6"
edition = "2018"

description = "Bindings for emulating a MySQL/MariaDB server"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/msql-srv"
homepage = "https://github.com/jonhoo/msql-srv"
repository = "https://github.com/jonhoo/msql-srv.git"

keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

license = "MIT/Apache-2.0"

[features]
default = ["tls"]
tls = ["rustls"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "msql-srv", build = "27" }
codecov = { repository = "jonhoo/msql-srv", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
nom = "7"
mysql_common = { version = "0.28.0", features = ["chrono"] }
byteorder = "1"
chrono = "0.4"
rustls = {version = "0.20.0", optional=true}

[dev-dependencies]
postgres = "0.19.1"
mysql = "22"
mysql_async = "0.29.0"
slab = "0.4.2"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.0"
rcgen = "0.8.14"
tempfile = "3.3.0"
native-tls = "0.2.8"

[target.'cfg(unix)'.dev-dependencies]
openssl = "0.10.38"
