[package]
name = "msql-srv"
version = "0.10.0"
edition = "2018"

description = "Bindings for emulating a MySQL/MariaDB server"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/msql-srv"
homepage = "https://github.com/jonhoo/msql-srv"
repository = "https://github.com/jonhoo/msql-srv.git"

keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

license = "MIT/Apache-2.0"

[features]
default = ["tls"]
tls = ["rustls"]

[dependencies]
nom = "7"
mysql_common = { version = "0.29.1", features = ["chrono"] }
byteorder = "1"
chrono = "0.4.23"
rustls = {version = "0.20.0", optional=true}

[dev-dependencies]
postgres = "0.19.1"
mysql = "23"
mysql_async = "0.31.0"
slab = "0.4.2"
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.0"
rcgen = "0.8.14"
tempfile = "3.3.0"
native-tls = "0.2.8"

[target.'cfg(unix)'.dev-dependencies]
openssl = "0.10.38"

# for minimal-versions
[target.'cfg(any())'.dev-dependencies]
flate2 = "1.0.13" # libz-sys 1.0.0 has problems
tap = "1.0.1" # bitvec's wyz dependency needs this
time = "0.3.1" # mysql_common needs this through chrono
byteorder = "1.2.4" # mysql_common needs this
rand = "0.3.14" # otherwise libc + winapi won't build
async-trait = "0.1.9" # via tokio-postgtes via postgres
twox-hash = "1.2.0" # via mysql
bufstream = "0.1.3" # via mysql
