[package]
name = "msql-srv"
version = "0.10.0"
edition = "2018"
rust-version = "1.66.0"

description = "Bindings for emulating a MySQL/MariaDB server"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/msql-srv"
homepage = "https://github.com/jonhoo/msql-srv"
repository = "https://github.com/jonhoo/msql-srv.git"

keywords = ["api-bindings", "database", "sql", "mock"]
categories = ["api-bindings", "network-programming", "database-implementations"]

license = "MIT/Apache-2.0"

[features]
default = ["tls"]
tls = ["rustls"]

[dependencies]
nom = "7"
mysql_common = { version = "0.31.0", features = ["chrono"] }
byteorder = "1"
chrono = "0.4.23"
rustls = { version = "0.22.1", optional = true }

[dev-dependencies]
postgres = "0.19.1"
mysql = "24"
mysql_async = "0.33.0"
slab = "0.4.2"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.0"
rcgen = "0.8.14"
tempfile = "3.3.0"
native-tls = "0.2.8"

[target.'cfg(unix)'.dev-dependencies]
openssl = "0.10.60"

# for minimal-versions
[target.'cfg(any())'.dev-dependencies]
flate2 = "1.0.13" # libz-sys 1.0.0 has problems
tap = "1.0.1" # bitvec's wyz dependency needs this
time = "0.3.1" # mysql_common needs this through chrono
byteorder = "1.2.4" # mysql_common needs this
rand = "0.3.14" # otherwise libc + winapi won't build
async-trait = "0.1.9" # via tokio-postgtes via postgres
twox-hash = "1.2.0" # via mysql
mysql_common = "0.30.6" # via mysql
bufstream = "0.1.3" # via mysql
bindgen = "0.58.1" # via mysql
cmake = "0.1.45" # via mysql
serde_derive = "1.0.100" # via mysql
